[tool.poetry]
name = "image-manipulation-cli"
version = "0.1.0"
description = "A Python-based CLI utility for common image manipulation tasks."
authors = ["Your Name <you@example.com>"] # Replace with actual author info if desired
readme = "README.md" # This will now point to image-tool/README.md
packages = [{include = "image_tool", from = "."}] # Adjusted 'from' to current dir

[tool.poetry.dependencies]
python = ">=3.10" # Taking the version from the new toml, ensuring it's >=3.10
Pillow = "^10.0.0"
ruff = "^0.1.0"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if any in the future (e.g., pytest)

[tool.poetry.scripts]
image-tool = "image_tool.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"] # Kept from the new toml
build-backend = "poetry.core.masonry.api"

# Ruff configuration from the root pyproject.toml
[tool.ruff]
# Enable Pyflakes and pycodestyle rules by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is used.
fixable = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a few common directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
